[package]
name = "electrologica"
version = "0.1.0"
edition = "2021"
authors = ["0xAlcibiades <alcibiades@warlock.xyz"]
homepage = "https://github.com/warlock-labs/electrologica"
repository = "https://github.com/warlock-labs/electrologica"
license = "Apache-2.0"
readme = "README.md"
categories = ["concurrency", "data-structures", "algorithms", "mathematics"]
description = "High performance concurrent primitives for Rust."


[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[[bench]]
name = "rayon_atomic_semaphore"
harness = false

[lib]
path = "src/lib.rs"

[dependencies]
pprof = { version = "0.13.0", features = ["flamegraph"], optional = true }


[dev-dependencies]
once_cell = "1.20.2"
rayon = "1.10.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
criterion = { version = "0.5.1", features = ["async_tokio"] }
tokio = { version = "1.0", features = ["full"] }
num_cpus = "1.13"


[features]
default = []
jemalloc = ["tikv-jemallocator"]
dev-profiling = ["pprof"]
